methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:6: error: not found: value color
    if (!color .green) {
         ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while (!estSurBiscuit()) {
  ^