methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while (!estSurBiscuit()) {
    avance();
    getCouleurSol();
    if (!color .green) {
    recule();
    gauche();
    avance();
  }
  }
  
}